# praxis-echo

./: Cargo.toml  README.md
docs/: index.html
src/: archive.rs  checkpoint.rs  init.rs  lib.rs  main.rs  nudge.rs  parser.rs  paths.rs  pulse.rs  review.rs  runtime.rs  scan.rs  state.rs  status.rs
templates/: praxis-echo.md
