[package]
name = "praxis-echo"
version = "0.1.0"
edition = "2021"
description = "Pipeline enforcement engine for AI self-evolution"
license = "MIT"
repository = "https://github.com/dnacenta/praxis-echo"
keywords = ["claude", "claude-code", "ai", "self-evolution", "llm"]
categories = ["command-line-utilities"]
authors = ["dnacenta"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
